# dynamics-explorables

./: .gitignore  .gitmodules  README.md  config.toml  hopf.html  hopf.js  hopf.py  load_mathjax.js  main.py  package-lock.json  package.hugo.json  pitchfork.html  pitchfork.js  pitchfork.py  py-worker.js   pyproject.toml
.github/workflows/: hugo.yml
Page_elements/: manifolds_elements.py
archetypes/: posts.md
assets/js/: arnold-cat.js  bifurcation-homoclinic-orbit.js  hopf.js  invariant-measures.js  lorenz-attractor.js  one-dimensional-maps.js  pitchfork.js  poincare-map.js  stable-unstable-manifolds.js
content/: _index.md  about.md
content/posts/: _index.md
content/posts/Advanced/: _index.md  bifurcation-homoclinic-orbit.md
content/posts/Basics/: sandbox.md  stable-unstable-manifolds.md
dynamics-explorables/: config.toml  package-lock.json  package.json
dynamics-explorables/archetypes/: default.md  posts.md
dynamics-explorables/assets/js/: bifurcation-homoclinic-orbit.js  hopf.js  invariant-measures.js  (+6 more)
dynamics-explorables/content/: _index.md  about.md  archive.md
dynamics-explorables/layouts/: index.html
layouts/shortcodes/: input.html  plotly.html  plotly2.html  radio_button.html  slider.html
page_elements/manifolds_elements/: manifolds_text.py  manifolds_widgets.py
pages/: 02_Center_Manifold.py  05_Lorenz_Attractor.py  69_Stable & Unstable_Manifolds.py  69_Stable_&_Unstable_manifolds.py  hopf.py  lorenz_attractor.py  pitchfork.py
pages_hide/: 69_Stable & Unstable_Manifolds_scetch.py  ex3 fixed.py  ex3.py
static/: bibliography.json
static/images/: attribution.txt
utils/: dynamical_systems_general.py  manifolds_utils.py  ut_ex3.py
(+97 files in other folders)
