[tool.poetry]
name = "dynamics-explorables"
version = "0.1.0"
description = ""
authors = ["Anastasia Golovin <anastasia.golovin@tum.de>"]
readme = "README.md"
packages = [{include = "dynamics_explorables"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.15.1"
matplotlib = "^3.6.2"
mpld3 = "^0.5.9"
streamlit-plotly-events = "^0.0.6"
streamlit-image-coordinates = "^0.1.1"
scipy = "^1.9.3"
plotly = "^5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
