[tool.poetry]
name = "dynamics-explorables"
version = "0.1.0"
description = ""
authors = ["Anastasia Golovin <anastasia.golovin@tum.de>"]
readme = "README.md"
packages = [{include = "dynamics_explorables"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.15.1"
plotly = "^5.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
